--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,16 @@ edition = "2021"
 rust-version = "1.71"
 
 [dependencies]
-anyhow = "1.0.72"
-blake3 = "1.4.1"
-chrono = { version = "0.4.26", default-features = false, features = [
+anyhow = "1.0.75"
+blake3 = "1.5.0"
+chrono = { version = "0.4.31", default-features = false, features = [
     "std",
     "serde",
 ] }
 once_cell = "1.18.0"
-regex = "1.9.3"
-serde = { version = "1.0.183", features = ["derive"] }
-serde_json = "1.0.104"
-tokio = { version = "1.31.0", features = ["full"] }
+regex = "1.9.5"
+rust_decimal = "1.32.0"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
+tokio = { version = "1.32.0", features = ["full"] }
 uuid = { version = "1.4.1", features = ["std", "v4", "serde"] }
