--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ rust-version = "1.73"
 
 [dependencies]
 anyhow = "1.0.75"
+aws-sdk-sesv2 = "0.35.0"
 blake3 = "1.5.0"
 chrono = { version = "0.4.31", default-features = false, features = [
     "std",
