--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 name = "medici-rust-shared"
 version = "0.1.0"
 edition = "2021"
-rust-version = "1.73"
+rust-version = "1.74"
 
 [dependencies]
 anyhow = "1.0.75"
-aws-sdk-sesv2 = "0.35.0"
+aws-sdk-sesv2 = "0.38.0"
 blake3 = "1.5.0"
 chrono = { version = "0.4.31", default-features = false, features = [
     "std",
@@ -14,8 +14,13 @@ chrono = { version = "0.4.31", default-features = false, features = [
 ] }
 once_cell = "1.18.0"
 regex = "1.10.2"
-rust_decimal = "1.32.0"
-serde = { version = "1.0.190", features = ["derive"] }
-serde_json = "1.0.107"
-tokio = { version = "1.33.0", features = ["full"] }
-uuid = { version = "1.5.0", features = ["std", "v4", "serde"] }
+rust_decimal = "1.33.1"
+serde = { version = "1.0.192", features = ["derive"] }
+serde_json = "1.0.108"
+sqlx = { version = "0.7.2", default-features = false, features = [
+    "runtime-tokio",
+    "postgres",
+    "macros",
+] }
+tokio = { version = "1.34.0", features = ["full"] }
+uuid = { version = "1.6.0", features = ["std", "v4", "serde"] }
