--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ blake3 = "1.5.0"
 chrono = { version = "0.4.31", default-features = false, features = [
     "std",
     "serde",
+    "clock",
 ] }
 once_cell = "1.19.0"
 regex = "1.10.2"
