--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,5 @@ sqlx = { version = "0.7.3", default-features = false, features = [
 ] }
 strum = { version = "0.25.0", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["full"] }
+tracing = "0.1.40"
 uuid = { version = "1.6.1", features = ["std", "v4", "serde"] }
