--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
+[workspace]
+members = [".", "macros"]
+
 [package]
-name = "medici-rust-shared"
+name = "medici-shared"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.78"
@@ -13,6 +16,7 @@ chrono = { version = "0.4.38", default-features = false, features = [
     "serde",
     "clock",
 ] }
+medici-macros = { path = "macros" }
 once_cell = "1.19.0"
 regex = "1.10.4"
 rust_decimal = "1.35.0"
