--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -11,4 +11,5 @@ proc-macro = true
 [dependencies]
 darling = "0.20.9"
 quote = { version = "1.0.36" }
+proc-macro2 = "1.0.83"
 syn = { version = "2.0.65", features = ["full"] }
