--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ members = [".", "macros"]
 name = "medici-shared"
 version = "0.1.0"
 edition = "2021"
-rust-version = "1.78"
+rust-version = "1.80"
 
 [dependencies]
 anyhow = "1.0.86"
-aws-sdk-sesv2 = "1.27.0"
-blake3 = "1.5.1"
+aws-sdk-sesv2 = "1.40.0"
+blake3 = "1.5.3"
 chrono = { version = "0.4.38", default-features = false, features = [
     "std",
     "serde",
@@ -18,16 +18,17 @@ chrono = { version = "0.4.38", default-features = false, features = [
 ] }
 medici-macros = { path = "macros" }
 once_cell = "1.19.0"
-regex = "1.10.4"
+regex = "1.10.6"
 rust_decimal = "1.35.0"
-serde = { version = "1.0.202", features = ["derive"] }
-serde_json = "1.0.117"
-sqlx = { version = "0.7.4", default-features = false, features = [
+serde = { version = "1.0.207", features = ["derive"] }
+serde_json = "1.0.124"
+sqlx = { version = "0.8.0", default-features = false, features = [
     "runtime-tokio",
     "postgres",
     "macros",
+    "derive",
 ] }
-strum = { version = "0.26.2", features = ["derive"] }
-tokio = { version = "1.37.0", features = ["full"] }
+strum = { version = "0.26.3", features = ["derive"] }
+tokio = { version = "1.39.2", features = ["full"] }
 tracing = "0.1.40"
-uuid = { version = "1.8.0", features = ["std", "v4", "serde"] }
+uuid = { version = "1.10.0", features = ["std", "v4", "serde"] }
