--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,20 @@ edition = "2021"
 rust-version = "1.82"
 
 [dependencies]
-anyhow = "1.0.89"
-aws-sdk-sesv2 = "1.51.0"
-blake3 = "1.5.4"
+anyhow = "1.0.94"
+async-openai = "0.26.0"
+aws-sdk-sesv2 = "1.55.0"
+blake3 = "1.5.5"
 chrono = { version = "0.4.38", default-features = false, features = [
     "std",
     "serde",
     "clock",
 ] }
 medici-macros = { path = "macros" }
-regex = "1.11.0"
+regex = "1.11.1"
 rust_decimal = "1.36.0"
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.129"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
 sqlx = { version = "0.8.2", default-features = false, features = [
     "runtime-tokio",
     "postgres",
@@ -28,12 +29,12 @@ sqlx = { version = "0.8.2", default-features = false, features = [
     "derive",
 ] }
 strum = { version = "0.26.3", features = ["derive"] }
-tokio = { version = "1.40.0", features = ["full"] }
-tracing = "0.1.40"
+tokio = { version = "1.42.0", features = ["full"] }
+tracing = "0.1.41"
 uuid = { version = "1.11.0", features = ["std", "v4", "serde"] }
 
 [dev-dependencies]
-fake = { version = "2.10.0", features = [
+fake = { version = "3.0.1", features = [
     "derive",
     "rust_decimal",
     "uuid",
