--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,40 +5,40 @@ members = [".", "macros"]
 name = "medici-shared"
 version = "0.1.0"
 edition = "2024"
-rust-version = "1.88"
+rust-version = "1.92"
 
 [dependencies]
-anyhow = "1.0.98"
-async-openai = "0.29.0"
-aws-sdk-sesv2 = "1.85.0"
+anyhow = "1.0.100"
+async-openai = { version = "0.32.2", features = ["chat-completion"] }
+aws-sdk-sesv2 = "1.110.0"
 blake3 = "1.8.2"
-chrono = { version = "0.4.41", default-features = false, features = [
+chrono = { version = "0.4.42", default-features = false, features = [
     "std",
     "serde",
     "clock",
 ] }
 medici-macros = { path = "macros" }
-regex = "1.11.1"
-rust_decimal = "1.37.2"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
+regex = "1.12.2"
+rust_decimal = "1.39.0"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
 sqlx = { version = "0.8.6", default-features = false, features = [
     "runtime-tokio",
     "postgres",
     "macros",
     "derive",
 ] }
-strum = { version = "0.27.1", features = ["derive"] }
-tokio = { version = "1.46.1", features = ["full"] }
-tracing = "0.1.41"
-uuid = { version = "1.17.0", features = ["std", "v4", "serde"] }
+strum = { version = "0.27.2", features = ["derive"] }
+tokio = { version = "1.49.0", features = ["full"] }
+tracing = "0.1.44"
+uuid = { version = "1.19.0", features = ["std", "v4", "serde"] }
 
 [dev-dependencies]
-fake = { version = "4.3.0", features = [
+fake = { version = "4.4.0", features = [
     "derive",
     "rust_decimal",
     "uuid",
     "chrono",
 ] }
-proptest = "1.7.0"
-rand = "0.9.1"
+proptest = "1.9.0"
+rand = "0.9.2"
